--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600&display=swap");
 body {
   font-family: "Rubik", sans-serif;
 }
@@ -11,8 +11,9 @@ body {
 }
 .navbar-tp .navbar-nav .active {
   color: #563ad6 !important;
-  font-weight: 600;
+  font-weight: 500 !important;
 }
 .navbar-tp .navbar-nav .nav-link {
   color: #02044a;
+  font-weight: 400;
 }/*# sourceMappingURL=main.css.map */
