--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -6,25 +6,31 @@ $sofpur: #eaeaf4;
 $darpur: #777790;
 $nedpur: #b4b5c9;
 $lilpur: #f9f9fb;
+$font-weights: (
+  "regular": 400,
+  "medium": 500,
+  "semibold": 600,
+);
 
-@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600&display=swap");
 
-body{
-    font-family: 'Rubik', sans-serif;
+body {
+  font-family: "Rubik", sans-serif;
 }
 
 .navbar-tp {
   padding-top: 30px;
   .navbar-nav {
-    li{
-        padding-left: 50px;
+    li {
+      padding-left: 50px;
     }
     .active {
       color: $purple !important;
-      font-weight: 600;
+      font-weight: map-get($font-weights,medium) !important;
     }
     .nav-link {
-        color: $navy;
+      color: $navy;
+      font-weight: map-get($font-weights,regular);
     }
   }
 }
