section sales dan memperdalam nesting

--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -16,4 +16,8 @@ body {
 .navbar-tp .navbar-nav .nav-link {
   color: #02044a;
   font-weight: 400;
+}
+
+.sales .copywriting .header {
+  font-weight: 600;
 }/*# sourceMappingURL=main.css.map */
