--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -6,6 +6,7 @@ $sofpur: #eaeaf4;
 $darpur: #777790;
 $nedpur: #b4b5c9;
 $lilpur: #f9f9fb;
+$newpurple: #9b9cb7;
 $font-weights: (
   "regular": 400,
   "medium": 500,
@@ -35,10 +36,42 @@ body {
   }
 }
 
+.btn-master {
+  padding: 15px 26px;
+  border-radius: 10px;
+  font-weight: map-get($font-weights, semibold);
+}
+
+.btn-primary {
+  @extend .btn-master;
+  background: $purple;
+  color: $white;
+  border: none;
+}
+
+.btn-secondary {
+  @extend .btn-master;
+  background: $sofpur;
+  color: $darpur;
+  border: none;
+}
+
 .sales {
+    padding-top: 100px;
   .copywriting {
     .header {
+      font-size: 46px;
       font-weight: map-get($font-weights, semibold);
+      color: $navy;
+      line-height: 60px;
+    }
+    .description {
+      margin-top: 20px;
+      margin-bottom: 40px;
+      color: $newpurple;
+      font-size: 18px;
+      line-height: 30px;
+      font-weight: map-get($font-weights, regular);
     }
   }
 }
