--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -1,18 +1,6 @@
-$purple: #563ad6;
-$aqua: #3abad6;
-$navy: #02044a;
-$white: #fff;
-$sofpur: #eaeaf4;
-$darpur: #777790;
-$nedpur: #b4b5c9;
-$lilpur: #f9f9fb;
-$newpurple: #9b9cb7;
-$font-weights: (
-  "regular": 400,
-  "medium": 500,
-  "semibold": 600,
-);
-
+@import './colors';
+@import './buttons';
+@import './typo';
 @import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600&display=swap");
 
 body {
@@ -34,26 +22,6 @@ body {
       font-weight: map-get($font-weights, regular);
     }
   }
-}
-
-.btn-master {
-  padding: 15px 26px;
-  border-radius: 10px;
-  font-weight: map-get($font-weights, semibold);
-}
-
-.btn-primary {
-  @extend .btn-master;
-  background: $purple;
-  color: $white;
-  border: none;
-}
-
-.btn-secondary {
-  @extend .btn-master;
-  background: $sofpur;
-  color: $darpur;
-  border: none;
 }
 
 .sales {
