--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -52,4 +52,7 @@ body {
   font-size: 18px;
   line-height: 30px;
   font-weight: 400;
+}
+.sales .brands-logo {
+  opacity: 0.4;
 }/*# sourceMappingURL=main.css.map */
