--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -1,6 +1,6 @@
-@import './colors';
-@import './buttons';
-@import './typo';
+@import "./colors";
+@import "./buttons";
+@import "./typo";
 @import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600&display=swap");
 
 body {
@@ -25,7 +25,7 @@ body {
 }
 
 .sales {
-    padding-top: 100px;
+  padding-top: 100px;
   .copywriting {
     .header {
       font-size: 46px;
@@ -41,5 +41,8 @@ body {
       line-height: 30px;
       font-weight: map-get($font-weights, regular);
     }
+  }
+  .brands-logo {
+    opacity: 0.4;
   }
 }
