--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -25,7 +25,7 @@ body {
 }
 
 .sales {
-  padding-top: 100px;
+  padding: 100px 0 50px;
   .copywriting {
     .header {
       font-size: 46px;
@@ -44,5 +44,25 @@ body {
   }
   .brands-logo {
     opacity: 0.4;
+    padding-bottom: 20px 0;
+  }
+}
+
+.pricing {
+    background: $lilpur;
+    padding-top: 100px;
+  .header {
+    font-size: 46px;
+    font-weight: map-get($font-weights, semibold);
+    color: $navy;
+    line-height: 60px;
+  }
+  .description {
+    margin-top: 20px;
+    margin-bottom: 40px;
+    color: $newpurple;
+    font-size: 18px;
+    line-height: 30px;
+    font-weight: map-get($font-weights, regular);
   }
 }
