--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -62,33 +62,33 @@ body {
   background: #f9f9fb;
   padding-top: 100px;
 }
-.pricing .master-card, .pricing .basic-card {
+.pricing .master-card, .pricing .most-card, .pricing .basic-card {
   padding: 30px;
   border-radius: 22px;
 }
-.pricing .master-card .item-benefit img, .pricing .basic-card .item-benefit img {
+.pricing .master-card .item-benefit img, .pricing .most-card .item-benefit img, .pricing .basic-card .item-benefit img {
   float: left;
   margin-right: 8px;
 }
-.pricing .master-card .item-benefit p, .pricing .basic-card .item-benefit p {
+.pricing .master-card .item-benefit p, .pricing .most-card .item-benefit p, .pricing .basic-card .item-benefit p {
   font-size: 16px;
   font-weight: 500;
 }
-.pricing .master-card .name, .pricing .basic-card .name {
+.pricing .master-card .name, .pricing .most-card .name, .pricing .basic-card .name {
   font-size: 18px;
   font-weight: 500;
 }
-.pricing .master-card .price, .pricing .basic-card .price {
+.pricing .master-card .price, .pricing .most-card .price, .pricing .basic-card .price {
   font-size: 36px;
   font-weight: 600;
   margin-top: 16px;
   margin-bottom: 16px;
 }
-.pricing .master-card .support, .pricing .basic-card .support {
+.pricing .master-card .support, .pricing .most-card .support, .pricing .basic-card .support {
   font-size: 16px;
   font-weight: 400;
 }
-.pricing .master-card .btn, .pricing .basic-card .btn {
+.pricing .master-card .btn, .pricing .most-card .btn, .pricing .basic-card .btn {
   width: 100%;
 }
 .pricing .basic-card {
@@ -99,6 +99,27 @@ body {
 }
 .pricing .basic-card .name {
   color: #02044a;
+}
+.pricing .basic-card .support {
+  color: #9b9cb7;
+}
+.pricing .most-card {
+  background: #563ad6;
+}
+.pricing .most-card .item-benefit {
+  color: #fff;
+}
+.pricing .most-card .name {
+  color: #fff;
+}
+.pricing .most-card .price {
+  color: #fff;
+}
+.pricing .most-card .support {
+  color: #9b9cb7;
+}
+.pricing .most-card .btn {
+  background: rgb(17, 190, 190);
 }
 
 .header {
