--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -78,19 +78,41 @@ body {
       font-size: 16px;
       font-weight: map-get($font-weights, regular);
     }
-    .btn{
-        width: 100%;
+    .btn {
+      width: 100%;
     }
   }
   .basic-card {
     @extend .master-card;
     background: $white;
-    .item-benefit{
-        color: $navy;
+    .item-benefit {
+      color: $navy;
     }
     .name {
       color: $navy;
     }
+    .support {
+      color: $newpurple;
+    }
+  }
+  .most-card {
+    @extend .master-card;
+    background: $purple;
+    .item-benefit {
+      color: $white;
+    }
+    .name {
+      color: $white;
+    }
+    .price {
+      color: $white;
+    }
+    .support {
+      color: $newpurple;
+    }
+    .btn {
+        background: rgb(17, 190, 190);
+      }
   }
 }
 
